--- a/styles/AssociModal.css
+++ b/styles/AssociModal.css
@@ -8,7 +8,7 @@
     left: 0;
 } */
 .modal--content {
-    background-color: rgb(175, 184, 216);
+    background-color: rgb(61, 57, 57, 0.2);
     border: 1px solid black;
     width: 80%;
     max-width: 700px;
@@ -25,7 +25,7 @@
     display: flex;
     flex-wrap: wrap;
     border: 1px solid gray;
-    background-color: rgb(255, 255, 255);
+    background-color: black;
     padding: .5em;
     margin: .5em;
     text-align: left;
