--- a/styles/facilities.css
+++ b/styles/facilities.css
@@ -1,5 +1,7 @@
 .facilities {
-    border: dotted grey;
+    background-color: rgb(61, 57, 57, 0.2);
+    box-shadow: 0px 0px 10px 0px black;
+    /* border: dotted whitesmoke; */
     padding: 1em;
     margin: 12pt;
     /* width: 100pt; */
