--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,32 @@
 @import "AssociModal.css";
 @import "facilities.css";
+
+.headerImg {
+    height: 8.5em;
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(90%);
+}
+.bodyImg {
+    /* width: 100%;
+    object-fit: cover; */
+}
+.title {
+    position: absolute;
+    top: 1em;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 4em;
+    color: black;
+    
+}
+body {
+    background: linear-gradient(0.25turn, #860d29, #083147);
+}
 .bodySection {
-    display:flex
+    display:flex;
+    /* background-color: black; */
+    color: whitesmoke;
 }
 h3 {
     margin: 2em;
@@ -21,10 +46,13 @@ h3 {
 }
 
 .Criminal {
-    border: dotted grey;
+    /* border: dotted whitesmoke; */
     padding: 6pt 100pt 6pt 20pt;
     margin: 12pt;
     width: 100pt;
+    background-color: rgb(61, 57, 57, 0.2);
+    box-shadow: 0px 0px 10px 0px black;
+    /* background-color: black; */
 }
 
 .name {
@@ -49,10 +77,14 @@ margin-top: 1em;
     margin-top: 1em;
     flex-basis: 25%;
 }
-
+.noteFormContainer {
+    background-color: rgb(61, 57, 57, 0.2);
+    /* background: black; */
+}
 .noteList {
-    
-    border: thin solid;
+    background-color: rgb(61, 57, 57, 0.2);
+    box-shadow: 0px 0px 10px 0px black;
+    border: thin solid black;
 }
 
 .note {
